--- a/app/src/main/res/layout/sinflrdata_clinte.xml
+++ b/app/src/main/res/layout/sinflrdata_clinte.xml
@@ -25,7 +25,7 @@
 
 
         <TextView
-            android:id="@+id/name_clinte"
+            android:id="@+id/name_clintesingle"
 
             android:layout_width="300dp"
             android:layout_height="wrap_content"
@@ -36,10 +36,10 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/email_clinte"
+            android:id="@+id/email_clintesingle"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/name_clinte"
+            android:layout_below="@id/name_clintesingle"
 
             android:layout_marginLeft="5dp"
             android:layout_toRightOf="@id/imageView"
@@ -49,10 +49,10 @@
             />
 
         <TextView
-            android:id="@+id/number_clinte"
+            android:id="@+id/number_clintesinglne"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/email_clinte"
+            android:layout_below="@id/email_clintesingle"
             android:layout_marginLeft="5dp"
 
             android:layout_toRightOf="@id/imageView"
@@ -60,10 +60,10 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/address_clinte"
+            android:id="@+id/address_clintesingle"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/number_clinte"
+            android:layout_below="@id/number_clintesinglne"
             android:layout_marginLeft="5dp"
             android:layout_toRightOf="@id/imageView"
             android:text="address"
@@ -73,7 +73,7 @@
             android:id="@+id/city_clinte"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/address_clinte"
+            android:layout_below="@id/address_clintesingle"
             android:layout_marginLeft="5dp"
             android:layout_toRightOf="@id/imageView"
             android:text="city"
@@ -99,7 +99,7 @@
         android:orientation="vertical">
 
         <Button
-            android:id="@+id/edite_clinte"
+            android:id="@+id/edite_clintesingle"
             android:layout_width="70dp"
             android:layout_height="40dp"
             android:layout_gravity="end"
@@ -108,7 +108,7 @@
             android:tint="#3700B3" />
 
         <Button
-            android:id="@+id/delete_clinte"
+            android:id="@+id/delete_clintesingle"
             android:layout_width="70dp"
             android:layout_height="40dp"
             android:layout_gravity="right"
