--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -51,4 +51,23 @@ which give u room space to store your case information , your client information
         android:textStyle="bold"
         android:textSize="20dp"
         />
+
+    <Button
+        android:id="@+id/video"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/imageview"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="250dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
+        android:background="@drawable/rect_rounded_button"
+        android:gravity="center"
+        android:padding="15dp"
+        android:text="video"
+        android:textSize="16dp" />
+
+
+
+
 </RelativeLayout>
